pkg/front_end/testcases/inference/map_literals_can_infer_null.dart.strong.transformed.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/map_literals_can_infer_null.dart:10:38: Error: A value of type 'int' can't be assigned to a variable of type 'Null'.
//       /*error:INVALID_CAST_LITERAL*/ 3] = /*error:INVALID_CAST_LITERAL*/
//                                      ^
//
// pkg/front_end/testcases/inference/map_literals_can_infer_null.dart:11:7: Error: A value of type 'String' can't be assigned to a variable of type 'Null'.
//       'z';
//       ^
//
import self as self;
import "dart:core" as core;

static method test1() → dynamic {
  core::Map<Null, Null> x = <Null, Null>{null: null};
  x.{core::Map::[]=}(invalid-expression "pkg/front_end/testcases/inference/map_literals_can_infer_null.dart:10:38: Error: A value of type 'int' can't be assigned to a variable of type 'Null'.
      /*error:INVALID_CAST_LITERAL*/ 3] = /*error:INVALID_CAST_LITERAL*/
                                     ^" in 3 as{TypeError} Null, invalid-expression "pkg/front_end/testcases/inference/map_literals_can_infer_null.dart:11:7: Error: A value of type 'String' can't be assigned to a variable of type 'Null'.
      'z';
      ^" in "z" as{TypeError} Null){(Null, Null) → void};
}
static method main() → dynamic {}
